k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: picato-prod # <-- Tumhare naye isolated room ka naam
  labels:
    env: production
