k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: picato-service
  namespace: picato-prod  
  labels:
    app: picato
spec:
  type: NodePort
  selector:
    app: picato
  ports:
    - port: 3000       # Cluster ke andar ka port
      targetPort: 3000 # Pod ka port
      nodePort: 30090  # VirtualBox/Minikube browser me access karne ke liye port
