k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: picato-ingress
  namespace: picato-prod  
  labels:
    app: picato
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "128m"
spec:
  ingressClassName: nginx # <-- Naye Kubernetes versions ke liye sahi tarika
  rules:
  - host: picato.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: picato-service
            port:
              number: 3000
