k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: picato-net-policy
  namespace: picato-prod
  labels:
    app: picato
spec:
  podSelector:
    matchLabels:
      app: picato
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector: {} # Cluster ke andar se traffic allow karega
    ports:
    - protocol: TCP
      port: 3000
  egress:
  - to:
    - namespaceSelector: {} # Internet aur database connection ke liye egress open rakhega
